--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,16 @@
 <resources>
     <string name="app_name">Lab</string>
     <string name="new_activity">NewActivity</string>
+    <string name="long_text">管一些滑动效果多么绚丽，归根到底，他们都是由不同的滑动外加一些特效所组成的。因此。
+        掌握滑动的方法是实现绚丽的自定义控件的基础。通过三种方式可以实现View的滑动: 第一种事通过View 本身提供的scrollTo/scrollBy 方法来实现滑动；
+        第二种是通过动画给View施加平移来实现滑动；第三种是通过改变View的LayoutParams使得View重新布局从而实现滑动。下面，我们一一对其进行讲解。
+        (1).使用scrollTo/scrollBy为了实现View的滑动，View提供了专门的方法来实现这个功能。那就是scrollTo/scrollBy。
+        经过分析源码得知,scrollBy实际上也是调用了scrollTo方法，而scrollTo则实现了基于所传递参数的绝对滑动。</string>
+    <string name="long_text_2">
+        利用scrollTo和scrollBy来实现View的滑动，这不困难，但我们要知道。滑动过程中，View内部的两个属性mScrollX和mScrollY的改变规则。
+        这两个属性可以通过getScrollX和getScrollY方法分别得到。在滑动过程中,mScrollX的值总是等于View左边缘和View内容左边缘在水平方向上的距离，
+        而mScrollY的值，总是等于View上边缘和View内容上边缘的竖直方向的距离。scrollTo和scrollBy只能改变View的内容的位置，
+        而不能改变View在布局中的位置。mScrollX和mScrollY的单位是像素，并且当View左边缘在View内容左边缘右边时，mScrollX为正值，反之为负值。
+        当View上边缘在View内容上边缘的下边时，mScrollY为正值，反之为负值。换句话说，如果从左向右滑动，那么mScrollX为负值，反之为正值。如果从上往下滑动，
+        mScrollY为负值，反之为正值。</string>
 </resources>
